--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "jsolano <justinesolano2370@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
